Work in progress: Added animated deletion. Need to delete only when row changes state from visible to invisible.

--- a/app/src/main/res/layout/person_item.xml
+++ b/app/src/main/res/layout/person_item.xml
@@ -4,16 +4,42 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/grey_600">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Place stuff here after swiping"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:tag="BottomView"
+            android:alpha="0">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/tvUndo"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="UNDO"
+                android:textColor="@color/orange_300"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/tvUndo"
+                android:gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="Deleted"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+
+        </RelativeLayout>
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
