OnClickListener added for Undo button. Code from MainActivity needs to moved to PersonAdapter.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,30 @@
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
 
-    <com.example.android.listviewdragginganimation.PersonListViewOrder
-        android:id="@+id/lvPersons"
+    <view
+        android:id="@+id/listViewBackground"
+        class="com.example.android.listviewdragginganimation.ListViewItemBackground"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/grey_300"
-        android:cacheColorHint="#00000000"
-        android:divider="#c0c0c0"
-        android:dividerHeight="1dp"
-        android:scrollingCache="true" />
+        android:layout_height="match_parent">
+
+        <!--<com.example.android.listviewdragginganimation.PersonListViewOrder-->
+            <!--android:id="@+id/lvPersons"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/grey_300"-->
+            <!--android:cacheColorHint="#00000000"-->
+            <!--android:divider="#c0c0c0"-->
+            <!--android:dividerHeight="1dp"-->
+            <!--android:scrollingCache="true"/>-->
+
+        <com.example.android.listviewdragginganimation.PersonListViewOrder
+            android:id="@+id/lvPersons"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="#c0c0c0"
+            android:dividerHeight="1dp"
+            android:scrollingCache="true"/>
+
+    </view>
 
 </RelativeLayout>
