--- a/app/src/main/res/layout/person_item.xml
+++ b/app/src/main/res/layout/person_item.xml
@@ -15,11 +15,26 @@
             android:tag="BottomView"
             android:alpha="0">
 
-            <TextView
-                android:id="@+id/tvUndo"
+            <!--<TextView-->
+                <!--android:id="@+id/tvUndo"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:background="@drawable/listview_item_bottom_button"-->
+                <!--android:focusableInTouchMode="true"-->
+                <!--android:gravity="center"-->
+                <!--android:paddingLeft="20dp"-->
+                <!--android:paddingRight="20dp"-->
+                <!--android:text="UNDO"-->
+                <!--android:textColor="@color/orange_300"-->
+                <!--android:textSize="18sp"/>-->
+
+            <com.example.android.listviewdragginganimation.ButtonBottomView
+                android:id="@+id/btnUndo"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
+                android:background="@drawable/listview_item_bottom_button"
                 android:gravity="center"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
@@ -31,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
-                android:layout_toLeftOf="@id/tvUndo"
+                android:layout_toLeftOf="@id/btnUndo"
                 android:gravity="center_vertical"
                 android:paddingLeft="20dp"
                 android:text="Deleted"
